--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
    style="position: absolute; left: 0; top: 0; z-index: 10;"></canvas>
       <canvas id="canvas2" 
    style="position: absolute; left: 0; top: 0; z-index: 0;"></canvas>
+		
+		<script>
+window.addEventListener('click', function () {	
+var v = document.querySelector('#video');	
+v.play();	
+});	
+</script>
             
             <!-- <input id="range" type="range" value="175" min="0" max="255" /> -->
             
