--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 left: 0px;
             }
     	#myVideo {
-  			position: fixed;
+  			position: ;
   			right: -100;
   			bottom: 0;
   			min-width: 100%;
