--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 left: 0px;
             }
     	#myVideo {
-  			position: ;
-  			right: -500;
+  			position: center;
+  			right: 0;
   			bottom: 0;
   			min-width: 100%;
   			min-height: 100%;
