--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             }
             video{
                 /*border: solid 1px red;*/
-                position: absolute;
-                left: -500px;
+                position: centre;
+                left: 0px;
             }
     	#myVideo {
   			position:fixed ;
