--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             }
             video{
                 /*border: solid 1px red;*/
-                position: centre;
+                position: absolute;
                 left: 0px;
             }
     	#myVideo {
