--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             }
             video{
                 /*border: solid 1px red;*/
-                position: centre;
+                position: center;
                 left: 0px;
             }
     	#myVideo {
-  			position:fixed ;
+  			position: center ;
   			right: 0;
-  			bottom: 50;
+  			bottom: 0;
   			min-width: 100%;
   			min-height: 100%;
 			}
