--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 left: 0px;
             }
     	#myVideo {
-  			position: absolute ;
+  			position: full ;
   			right: 0;
   			bottom: 0;
   			min-width: 100%;
