--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 left: 0px;
             }
     	#myVideo {
-  			position: full ;
+  			position: 0 ;
   			right: 0;
-  			bottom: 0;
+  			bottom: 500;
   			min-width: 100%;
   			min-height: 100%;
 			}
