--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                 left: 0px;
             }
     	#myVideo {
-  			position: absolute;
+  			position: fixed;
   			right: 0;
   			bottom: 0;
   			min-width: 100%;
-  			min-height: 100%;
+  			min-height: 150%;
 			}
             /*body{
                 background-color: appworkspace;
